Filled the education part

--- a/index.html
+++ b/index.html
@@ -156,6 +156,17 @@
             <div class="subheading mb-3">Bachelor of Computer Systems Engineering</div>
 
             <p>First Class Honors (GPA: 4.00)</p>
+            <div>
+              <ul>
+                <li>Final year project: Developed a finance application that helped users analyze their expenses and investments using Android Studio (Java).</li>
+                <li>Led a team of four to present a prototype app designed in Figma at a FinTech Technovation and achieved the runner’s up position.</li>
+                <li>Developed projects using advanced data structures and algorithms using programming languages such as C, C++, Java, and Python.</li>
+                <li>Experience with project management methodologies such a waterfall and agile.</li>
+                <li>Implemented an Automated Water pumping system using Python in Linux OS.</li>
+              </ul>
+              
+            </div>
+            
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2019 - April 2022</span>
@@ -322,6 +333,9 @@
           </li>
           <li class="list-inline-item">
             <i class="devicons devicons-firebase"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicons devicons-django"></i>
           </li>
 
 
