fixed mail link

--- a/index.html
+++ b/index.html
@@ -93,13 +93,9 @@
           <span class="text-primary">Abraham</span>
         </h1>
         <div class="subheading mb-5">Dubai, UAE·
-          <a href="mailto:name@email.com"> shaneabh777@gmail.com</a>
+          <a href="mailto:shaneabh777@gmail.com"> shaneabh777@gmail.com</a>
         </div>
-        <p class="mb-5">Hi, My name is Shane Abraham and I like to do many things. My passion for programming began
-          during the first year of my university.
-          I enjoyed all the classes and even got time to spend with my friends. I have recently graduated from Middlesex
-          University Dubai with First Class Honors
-          and I am proud that I was able to achieve that with the help of my family and peers.
+        <p class="mb-5 ">Hi, My name is Shane Abraham, and I am based in Dubai. I am into software and web developement.
         <br/><br/>
         I am a person who learns by doing things and understanding things my way. Hence, I find programming very
           interesting as it involves solving a lot of errors and
