--- a/index.html
+++ b/index.html
@@ -517,8 +517,7 @@
       <div class="my-auto">
         <h2 class="mb-5">Interests</h2>
         <p>Apart from being a software developer, I enjoy most of my time being outdoors. During pleasant climates, I
-          like to
-          I like to go for a walk or driving long distances and discover new places.
+          like to go for a walk or driving long distances and discover new places.
         </p>
         <p class="mb-0">When forced indoors, I enjoy watching Formula 1 and comedy series and movies. I also like
           reading
