--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h1 class="mb-0">Shane
           <span class="text-primary">Abraham</span>
         </h1>
-        <div class="subheading mb-5">Dubai, UAE·
+        <div class="subheading mb-5">Waterloo, Ontario, Canada
           <a href="mailto:shaneabh777@gmail.com"> shaneabh777@gmail.com</a>
         </div>
         <p class="mb-5 ">Hey there! My name is Shane Abraham and I'm excited to introduce myself! I recently graduated from Middlesex University Dubai with a First Class Honors Degree. 
@@ -217,7 +217,7 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Course Experience</h3>
             <div class="subheading mb-3"><a href="https://www.upgrad.com/ae/free-courses/" target="_blank" style="color: #868e96;">Introduction to React JS (UpGrad)</a></div>
@@ -312,7 +312,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2022 - Sept 2022</span>
           </div>
-        </div>
+        </div> -->
 
                 
         
